# vora-agent

./: .env.example  .gitignore  AGENTS.md  README.md  helloworld.py  pyproject.toml  summary.md
.github/workflows/: quality.yml
docs/: codex-testing-and-fixes-2.zh.md  codex-testing-and-fixes.zh.md  demo-scenarios.zh.md  fixed-issues-and-optimizations.md  production-readiness.zh.md  security-model.zh.md  testing-strategy.zh.md  v1-completion-test-checklist.md  v1-product-design.md  v1-technical-design.md
docs/adr/: 0001-self-managed-agent-runtime.zh.md  0002-sqlite-memory-and-json-session-store.zh.md  0003-preserve-tool-exchange-integrity.zh.md  0004-reflection-pytest-gate-for-code-tasks.zh.md  0005-tool-content-reference-context.zh.md  0006-file-tool-direct-execution-policy.zh.md
docs/superpowers/plans/: 2026-06-30-manus-mini-v1.md  2026-06-30-manus-mini-v1.zh.md  2026-06-30-vora-v1.md  2026-06-30-vora-v1.zh.md  2026-07-02-command-test-gate.md  2026-07-02-command-test-gate.zh.md  2026-07-09-reflection-pytest-gate.zh.md  2026-07-24-project-retrieval-efficiency.md  2026-07-24-query-driven-retrieval.md
docs/superpowers/specs/: 2026-07-02-command-test-gate-design.md  2026-07-02-command-test-gate-design.zh.md  2026-07-24-project-retrieval-efficiency-design.md  2026-07-24-query-driven-retrieval-design.md
evals/: README.zh.md  __init__.py  cases.zh.json  run_evals.py
src/manus_mini/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  executor.py  llm.py  logging.py  memory.py  models.py  observer.py  planner.py  prompt_tui.py  prompt_tui_formatting.py  react.py  redaction.py  reflection.py  reflector.py  reporter.py  runtime.py  scheduler.py  session.py  session_store.py
src/manus_mini/tools/: __init__.py  automation_tools.py  base.py  file_tools.py  registry.py  search_tools.py  shell_tools.py
src/vora/: __init__.py  __main__.py  cli.py  config.py  context.py  executor.py  llm.py  logging.py  mcp.py  memory.py  models.py  observer.py  planner.py  project_index.py  prompt_tui.py  prompt_tui_formatting.py  react.py  redaction.py  reflection.py  reflector.py  reporter.py  runtime.py  scheduler.py  session.py  session_store.py  task_strategy.py  token_breakdown.py  validation.py
src/vora/plugins/: __init__.py  manager.py
src/vora/skills/: __init__.py  loader.py  manager.py  models.py  registry.py
src/vora/tools/: __init__.py  base.py  code_tools.py  file_tools.py  registry.py  research_tools.py  search_tools.py  shell_tools.py
tests/: conftest.py  support.py  test_app.py  test_cli.py  test_config.py  test_context.py  test_demos.py  test_evals.py  test_llm.py  test_logging.py  test_memory.py  test_models.py  test_package.py  test_planner_reflector.py  test_project_index.py  test_prompt_tui.py  test_redaction.py  test_runtime.py  test_scheduler.py  test_session.py  test_session_store.py  test_shell_tools.py  test_skills.py  test_tool_packs.py  test_tools.py
