[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manus-mini"
version = "20260702.1644"
description = "Manus mini demo project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "prompt_toolkit",
  "pydantic",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
manus-mini = "manus_mini.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
