[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vora"
version = "20260702.1644"
description = "A local, observable and safety-governed Agent Runtime for engineering demonstrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckduckgo_search>=8,<9",
  "prompt_toolkit>=3.0,<4",
  "pydantic>=2.10,<3",
  "requests>=2.32,<3",
  "rich>=13,<15",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
]

[project.scripts]
vora = "vora.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vora"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
files = ["src/vora"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["src/vora/prompt_tui.py", "src/vora/prompt_tui_formatting.py"]
